--- a/config/locales/pl.yml
+++ b/config/locales/pl.yml
@@ -12,10 +12,17 @@ pl:
         name: "Nazwa"
         year: "Rok"
         journal_type: "Rodzaj"
+
   category:
     is_expense: "Wydatek"
     is_income: "Przychód"
+  journal:
+    name: "Nazwa"
+    year: "Rok"
+    journal_type: "Rodzaj"
   active: "aktywny"
   invited: "zaproszony"
   save: "Zapisz"
   search: "Szukaj"
+  edit: "Edycja"
+  back: "Wstecz"
