Użytkownik będący superadminem może ustawić innym użytkownikom (również sobie), czy są superadminami.

--- a/config/locales/pl.yml
+++ b/config/locales/pl.yml
@@ -5,6 +5,7 @@ pl:
         email: "E-mail"
         password: "Hasło"
         remember_me: "Zapamiętaj sobie"
+        is_superadmin: "Superadmin"
       category:
         name: "Nazwa"
         is_expense: "Wydatek"
