Kategoria musi mieć określony rok

--- a/config/locales/pl.yml
+++ b/config/locales/pl.yml
@@ -8,6 +8,7 @@ pl:
         is_superadmin: "Superadmin"
       category:
         name: "Nazwa"
+        year: "Rok"
         is_expense: "Wydatek"
       journal:
         name: "Nazwa"
