Użytkownik nie może oglądać książek jednostek, do których nie ma uprawnień.

--- a/config/locales/pl.yml
+++ b/config/locales/pl.yml
@@ -35,3 +35,5 @@ pl:
   back: "Wstecz"
   expenses: "Wydatki"
   incomes: "Wpływy"
+  unauthorized:
+    default: "Próbowałeś/łaś obejrzeć coś, czego nie wolno ci oglądać."
