--- a/config/locales/pl.yml
+++ b/config/locales/pl.yml
@@ -48,6 +48,7 @@ pl:
         email: "E-mail"
         password: "Hasło"
         password_confirmation: "Powtórz hasło"
+        current_password: "Aktualne hasło"
         remember_me: "Zapamiętaj sobie"
         is_superadmin: "Superadmin"
         unit_ids: "Przypisane drużyny"
