--- a/config/locales/devise.pl.yml
+++ b/config/locales/devise.pl.yml
@@ -42,6 +42,14 @@ pl:
       updated: 'You updated your account successfully.'
       update_needs_confirmation: "You updated your account successfully, but we need to verify your new email address. Please check your email and click on the confirm link to finalize confirming your new email address."
       destroyed: 'Bye! Your account was successfully cancelled. We hope to see you again soon.'
+      edit:
+        header: "Edytuj ustawienia konta"
+        new_password_info: "(pozostaw puste, jeżeli nie chcesz go zmieniać)"
+        current_password_info: "(potrzebujemy twoje hasło aby potwierdzić zmiany)"
+        submit_button: "Zapisz zmiany"
+        delete_account_header: "Usuń konto"
+        delete_account_info: "Rezygnujesz z ZiHeRa?"
+        delete_account: "Usuń moje konto"
     unlocks:
       send_instructions: 'You will receive an email with instructions about how to unlock your account in a few minutes.'
       unlocked: 'Your account has been unlocked successfully. Please sign in to continue.'
