Użytkownik zyskał numer telefonu (w widokach, bo w bazie już był)

--- a/config/locales/pl.yml
+++ b/config/locales/pl.yml
@@ -56,6 +56,7 @@ pl:
         is_blocked: "Zablokowany"
         first_name: "Imię"
         last_name: "Nazwisko"
+        phone: "Telefon"
 
   category:
     is_expense: "Wydatek"
