--- a/config/locales/pl.yml
+++ b/config/locales/pl.yml
@@ -44,6 +44,8 @@ pl:
         income_detailed: "Wpływy szczegółowo"
         expense_all: "Wydatki razem"
         expense_detailed: "Wydatki szczegółowo"
+        income_expense_all: "Wydatki i wpływy"
+        details: "Informacje"
       unit:
         name: "Nazwa jednostki"
         code: "Kod jednostki"
